--- a/src/style.css
+++ b/src/style.css
@@ -15,15 +15,32 @@
 .header {
     grid-row: 1;
     grid-column: 1 / 3;
-    border: 1px solid;
+    background-color: #fecdd3;
 }
 
 .sidebar {
     grid-row: 2 / 3;
     grid-column: 1;
+    background-color: #f5f3ff;
 }
 
 .todos {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 0.3fr));
+    gap: 100px;
+    padding: 100px;
+}
+
+.toDocard {
+    display: flex;
+    flex-direction: column;
+    background-color: blanchedalmond;
+    height: 200px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    background-color: blanchedalmond;
+    height: 200px;
 }
