--- a/src/style.css
+++ b/src/style.css
@@ -13,18 +13,65 @@
 }
 
 .header {
+    display: flex;
+    align-items: center;
+    padding: 15px;
     grid-row: 1;
     grid-column: 1 / 3;
-    background-color: #fecdd3;
+    background-color: #14b8a6;
+    color: white;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 .sidebar {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 5px;
     grid-row: 2 / 3;
     grid-column: 1;
-    background-color: #f5f3ff;
+    background-color: #f5f5f4;
+    padding: 10px;
+}
+
+.sidebar.projects {
+    padding-top: 50px;
+}
+
+
+button.addProject {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    width: 120px;
+    height: 30px;
+    background-color: #0e7490;
+    border-radius: 10px;
+    border: 0px;
+    font-weight: bold;
+    color: white;
+}
+
+div.cardformbutton {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+button.cardformbutton {
+    right: 8px;
+    top: 8px;
+    width: 70px;
+    height: 30px;
+    background-color: #8b5cf6;
+    border-radius: 10px;
+    border: 0px;
+    font-weight: bold;
+    color: white;
+}
+
+button.cardformbutton:hover {
+    background-color: #7c3aed;
 }
 
 .content {
@@ -37,7 +84,7 @@ button.addCard {
     right: 20px;
     width: 170px;
     height: 60px;
-    background-color: #a78bfa;
+    background-color: #0e7490;
     border-radius: 10px;
     border: 0px;
     font-size: 22px;
@@ -45,8 +92,9 @@ button.addCard {
     color: white;
 }
 
-button.addCard:hover {
-    background-color: #c4b5fd;
+button.addCard:hover,
+button.addProject:hover {
+    background-color: #0891b2;
 }
 
 .todos {
@@ -59,18 +107,20 @@ button.addCard:hover {
 .toDocard {
     display: flex;
     flex-direction: column;
-    background-color: blanchedalmond;
+    background-color: #ddd6fe;
     height: 300px;
-    padding: 15px;
+    padding: 35px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    color: #404040;
+    font-size: 20px;
 }
 
 form#cardForm {
     display: flex;
     flex-direction: column;
-    background-color: blanchedalmond;
+    background-color: #ddd6fe;
     height: 300px;
     padding: 15px;
     border-radius: 10px;
@@ -78,14 +128,52 @@ form#cardForm {
     justify-content: space-evenly;
 }
 
+input {
+    appearance: none;
+    background-color: #ede9fe;
+    border: 0px;
+    height: 25px;
+    border-radius: 10px;
+    padding: 0px 5px;
+    color: #404040;
+    font-size: 16px;
+}
+
+input#projectinput {
+    background-color: #f0fdfa;
+}
+
+textarea {
+    padding: 5px;
+    appearance: none;
+    height: 100px;
+    border: 0px;
+    border-radius: 10px;
+    background-color: #ede9fe;
+    color: #404040;
+    font-size: 16px;
+}
+
+input:focus {
+    outline: none;
+}
+
+textarea:focus {
+    outline: none;
+}
+
 div.project {
-    background-color: #a78bfa;
+    background-color: #a7f3d0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px 0px;
+    color: #404040;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
 }
 
 div.project:hover {
-    background-color: #c4b5fd;
+    background-color: #6ee7b7;
 }
+
