--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@
     gap: 5px;
     grid-row: 2 / 3;
     grid-column: 1;
-    background-color: #f5f5f4;
+    background-color: #e7e5e4;
     padding: 10px;
 }
 
@@ -59,8 +59,6 @@ div.cardformbutton {
 }
 
 button.cardformbutton {
-    right: 8px;
-    top: 8px;
     width: 70px;
     height: 30px;
     background-color: #8b5cf6;
@@ -68,6 +66,13 @@ button.cardformbutton {
     border: 0px;
     font-weight: bold;
     color: white;
+}
+
+form#projectForm {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
 
 button.cardformbutton:hover {
@@ -88,6 +93,16 @@ button.addCard {
     border-radius: 10px;
     border: 0px;
     font-size: 22px;
+    font-weight: bold;
+    color: white;
+}
+
+button#projectsubmitbutton {
+    width: 50px;
+    height: 25px;
+    background-color: #0e7490;
+    border-radius: 10px;
+    border: 0px;
     font-weight: bold;
     color: white;
 }
@@ -132,15 +147,31 @@ input {
     appearance: none;
     background-color: #ede9fe;
     border: 0px;
-    height: 25px;
+    height: 27px;
     border-radius: 10px;
-    padding: 0px 5px;
+    padding: 0px 7px;
     color: #404040;
     font-size: 16px;
 }
 
 input#projectinput {
-    background-color: #f0fdfa;
+    height: 23px;
+    background-color: white;
+}
+
+select {
+    background-color: #ede9fe;
+    border: 0px;
+    height: 25px;
+    border-radius: 10px;
+    padding: 0px 5px;
+    color: #404040;
+    font-size: 16px;
+
+}
+
+select:focus {
+    outline: none;
 }
 
 textarea {
@@ -156,24 +187,31 @@ textarea {
 
 input:focus {
     outline: none;
+    background-color: white;
 }
 
 textarea:focus {
     outline: none;
+    background-color: white;
 }
 
 div.project {
-    background-color: #a7f3d0;
+    background-color: #14b8a6;
+    padding: 3px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #404040;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     border-radius: 5px;
 }
 
 div.project:hover {
-    background-color: #6ee7b7;
+    background-color: #2dd4bf;
 }
 
+::placeholder { 
+    color: #404040;
+    opacity: 1; 
+  }
