--- a/src/style.css
+++ b/src/style.css
@@ -223,6 +223,7 @@ textarea:focus {
 div.project {
     background-color: #fafafa;
     padding: 15px 0px;
+    gap: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -230,6 +231,17 @@ div.project {
     font-size: 16px;
     font-weight: bold;
     border-bottom: 1px solid #e5e5e5;
+}
+
+div.projectCounter {
+    color: whitesmoke;
+    background-color: #a3a3a3;
+    font-size: 12px;
+    padding: 2px 8px;
+    border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 div.project:hover {
