--- a/src/style.css
+++ b/src/style.css
@@ -150,6 +150,18 @@ button#projectsubmitbutton:hover {
     color: #404040;
 }
 
+.bigToDoCard {
+    display: flex;
+    flex-direction: column;
+    background-color: #ddd6fe;
+    height: 600px;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    justify-content: space-between;
+    color: #404040;
+}
+
 form#cardForm {
     display: flex;
     flex-direction: column;
